# steel

./: CONTRIBUTING.md  Makefile  NewDomains.fst  README.md  Steel.fst.config.json  flake.nix  steel.opam
.devcontainer/: minimal.Dockerfile
.github/workflows/: ci.yml  linux-build.yaml  linux-x64-nightly.yaml  linux-x64.yaml  macos-build.yml  opam.yml
include/steel/: steel_full.h
lib/steel/: Makefile  Steel.Array.fsti  Steel.Channel.Simplex.fst  Steel.Coinduction.fsti  Steel.DisposableInvariant.fst  Steel.DisposableInvariant.fsti  Steel.Effect.Atomic.fst  Steel.Effect.Atomic.fsti  Steel.Effect.Common.fst  Steel.Effect.Common.fsti  Steel.Effect.M.fst  Steel.Effect.fst  Steel.Effect.fsti  Steel.FractionalAnchoredPreorder.fst  Steel.FractionalPermission.fst  Steel.GhostMonotonicHigherReference.fst  Steel.GhostPCMReference.fsti  Steel.Heap.fst  Steel.Heap.fsti  Steel.HigherReference.fst  Steel.Loops.fst  Steel.Loops.fsti  Steel.MST.fst  Steel.MSTTotal.fst  Steel.Memory.fst  Steel.Memory.fsti  Steel.MonotonicHigherReference.fst  Steel.NMST.fst  Steel.NMSTTotal.fst  Steel.PCMReference.fsti  Steel.Primitive.ForkJoin.Unix.fst  Steel.Reference.fst  Steel.ST.Array.fst  Steel.ST.Array.fsti  Steel.ST.Coercions.fst  Steel.ST.Coercions.fsti  Steel.ST.Effect.Atomic.fst  Steel.ST.Effect.Atomic.fsti  Steel.ST.Effect.AtomicAndGhost.fst  Steel.ST.Effect.AtomicAndGhost.fsti  (+35 more)
mk/: boot.mk  common.mk  extraction.mk  locate_fstar.mk  plugin.mk
pulse2rust/src/: Makefile  Pulse2Rust.Rust.Syntax.fst  Pulse2Rust.fst  Pulse2Rust.fst.config.json
share/steel/: Makefile.include
src/: Makefile
src/c/: extract.Makefile
src/ci/: ci.Dockerfile  config.json  hierarchic.Dockerfile  no-fstar-home.Dockerfile  opam.Dockerfile  package-README.md  package.Dockerfile  package.sh
src/extraction/: ExtractSteel.Krml.fst  ExtractSteel.Krml.fsti  (+12 more)
src/ocaml/plugin/: PulseSyntaxExtension_SyntaxWrapper.ml  PulseSyntaxWrapper.ml  Pulse_Parser.ml  RustBindings.ml  dep.graph  dune  extract-pulse.Makefile  extract-steel.Makefile  extraction.ml  plugin.ml  pulseparser.mly
src/ocaml/plugin/rust/src/: lib.rs
src/ocaml/rust/: Cargo.toml  dune
tmp/: logfile-00.smt2  logfile-10.smt2  logfile-15.smt2  logfile-16.smt2
(+324 files in other folders)
