(rule
 (targets librustast_bindings.a dllrustast_bindings.so)
 (deps (source_tree .))
 (action
  (no-infer
   (progn
    (run cargo build)
    (run sh -c
      "cp target/debug/librustast_bindings.so ./dllrustast_bindings.so")
    (run cp target/debug/librustast_bindings.a ./librustast_bindings.a)
   ))))

(library
 (name rustast_bindings)
 (c_library_flags -lpthread -lc -lm)
 (foreign_archives rustast_bindings))